# ChangeLog for sys-devel/llvm
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/llvm/ChangeLog,v 1.79 2012/06/02 09:56:43 chithanh Exp $

  02 Jun 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  llvm-3.1.ebuild:
  Keyword ~arm, bug #320221.

  26 May 2012; Alexis Ballier <aballier@gentoo.org> llvm-3.1.ebuild:
  keyword ~amd64-fbsd

*llvm-3.1 (23 May 2012)

  23 May 2012; Michał Górny <mgorny@gentoo.org> +llvm-3.1.ebuild:
  Version bump.

  20 May 2012; Michał Górny <mgorny@gentoo.org> llvm-9999.ebuild:
  Fix omitted doman call.

  20 May 2012; Michał Górny <mgorny@gentoo.org> llvm-9999.ebuild:
  Disable manpage generation code until either rst2man or docs are fixed.

  14 May 2012; Michał Górny <mgorny@gentoo.org> llvm-9999.ebuild:
  Generate manpages before compiling llvm -- save time if it is going to fail.

  13 May 2012; Michał Górny <mgorny@gentoo.org> llvm-9999.ebuild:
  Generate manpages from .rst files.

  10 May 2012; Patrick Lauer <patrick@gentoo.org> llvm-9999.ebuild:
  Upstream changed doc handling, removing obsolete patch from -9999 ebuild

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> llvm-2.9-r2.ebuild,
  llvm-3.0-r2.ebuild, llvm-9999.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  02 May 2012; Michał Górny <mgorny@gentoo.org> metadata.xml:
  Add myself as a co-maintainer.

  30 Apr 2012; Fabian Groffen <grobian@gentoo.org>
  +files/llvm-3.2-nodoctargz.patch, llvm-9999.ebuild:
  Fix nodoctargz patch for latest source, bug #413111

  30 Apr 2012; Fabian Groffen <grobian@gentoo.org> llvm-9999.ebuild:
  Extract the version LLVM refers to internally so we can properly fix
  install_names on Darwin, bug #412137

  13 Apr 2012; Bernard Cafarelli <voyageur@gentoo.org> -llvm-3.0-r1.ebuild,
  llvm-3.0-r2.ebuild, llvm-9999.ebuild:
  Support epatch_user, bug #411447

  13 Apr 2012; Bernard Cafarelli <voyageur@gentoo.org> llvm-3.0-r2.ebuild,