@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX llvm-2.6-commandguide-nops.patch 975 RMD160 1178c27a8845c2c86d6d381ba3d95b4b9b627f1e SHA1 41b9d8c3ae0ed1023ec72bf629c53fa8981e0264 SHA256 0e36fb43e020fa380230a8c6f2a79b9a19e12e857e833ef856e2b41aaa283649
 AUX llvm-2.7-nodoctargz.patch 1878 RMD160 a6134fd292a1a2c6a594e787ce73b15012be04bb SHA1 9d32a0e15791789d8bf58dfecf9580a00d150319 SHA256 983657329ebede731b397ba0256d729b3958f39faea64c9f7d065ab8d2a3e7fd
 AUX llvm-2.8-alignof.patch 2522 RMD160 6a359ba15b1943929541c5e7bbd6a2a6480e85bc SHA1 41f11ba3fdb4d6cd8761380594bd777fd83e2f96 SHA256 a9f7add4f4002bf9af438c0c4d1ca86875d6214a5044334325a60cdcbc8a3cdc
@@ -16,8 +19,17 @@ DIST llvm-3.0.tar.gz 10350539 RMD160 85211cafbed1c5d838ac54669017b5298613f975 SH
 DIST llvm-3.1.src.tar.gz 11077429 RMD160 ceb0ef36ab6109da7a8568b04de759752dbee5a7 SHA1 234c96e73ef81aec9a54da92fc2a9024d653b059 SHA256 1ea05135197b5400c1f88d00ff280d775ce778f8f9ea042e25a1e1e734a4b9ab
 EBUILD llvm-2.8-r2.ebuild 6222 RMD160 34c51d4deb8ba605df908542a581099af7043a7f SHA1 c86b4cfe710b65ffedd934096df8394da9a8798f SHA256 4e9fc704a4aa3b1a8e07bf9807f1f3fbdc429d1ab075edf025dd6b96e003d852
 EBUILD llvm-2.9-r2.ebuild 6179 RMD160 f74c12b1ac78b90ed37883de43ade7191e80b59e SHA1 f029d00eb70dcc36b0c0059978dd3be7428ed406 SHA256 1ef42910022038d95ba6964a310955098b8aa50041567be185a528ddb44af19d
-EBUILD llvm-3.0-r2.ebuild 5678 RMD160 874f6aaf1061ecf3a8eb56335525dd4e40178d0a SHA1 f47af0952c5d5be772e71336d09ca4b41b967736 SHA256 48afab4bef99e55ccf2b23df6e7078d32c6ac88063573cc28e95b6b94be26253
-EBUILD llvm-3.1.ebuild 5581 RMD160 0e8fd31e21425935025145f2b1d8bde69123ecf5 SHA1 6c3058b8ce7284eefbec4bcb3ff4cc1aa753d56b SHA256 f467c382b42b92c3a1ef35bc005bdbf1a9d4392635dcc444d61bda9bfaa3e40c
+EBUILD llvm-3.0-r2.ebuild 5683 RMD160 9f8c8c82bc97604893c1e0569cc79c9352e343c5 SHA1 32e6a266cf43c2d83a2522337c0e5010b6397483 SHA256 6d12b1ba54999e711d1ef999ec5b0f4689635bd134f5e23ce712749cdf652c68
+EBUILD llvm-3.1.ebuild 5584 RMD160 e74e83df95bb6d42240aca966dcc5569b780390d SHA1 45740a884096bf651059d09a713c249abb61d6a8 SHA256 aadcf2282449b9dab0f0fffc9b24ea7094168ce79cd0f3aa72bc01b9a4ff3a81
 EBUILD llvm-9999.ebuild 5807 RMD160 6ddc2ca9be946bd224b9c047161369cee301cf97 SHA1 13f53e69cb558284035eeb27d5b66407974f9930 SHA256 7872a253436d1d7a98ddd8d634d98511e29f9622ef22315429982297cbd0f689
-MISC ChangeLog 12932 RMD160 43c7d9fb349ec1fd013b3fe2899a274fbca3584c SHA1 d697089a10de667fc8dcaf00b78ac5833d04056c SHA256 cde79e2d4bb2c553829d0d7d5c1a6bbd74ef81bbcc86895806003876d6b65eba
+MISC ChangeLog 13075 RMD160 a56a35b4acea49fa1082d10b234aaaea014f2578 SHA1 8ef97b6b85cf66d8ccfec9331b40c99bef4a255c SHA256 c2685cbf78bd8937d12acb8009c7cb2adbedf72c5a74d7bfad9f6541b370c08c
 MISC metadata.xml 2384 RMD160 a1b7ecfa8999a3bc77cc7365e3efa7bdcfbccdbe SHA1 040998e45e7adbcef69ac194253342b64192face SHA256 c0f936ccdd15b17a06d712f1d7a58ff0fec818ee618279778fbc37abd50f76d6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iJwEAQEIAAYFAk/NGZ8ACgkQfXuS5UK5QB3wxwP/Zns2PlLSoA+b/2NNsaMcrwjE
+tOOiXmHz+JL0FTlvir/rkVZp9ls93vSDbgJHyarP+Twdh76D61TLrPXrdFA8rVCB
+9j+8yKjy3aGvrhVr91puDFKvu5JdhjzAAbnaFSRIZ+fNoegxNw0a+izi9u/GB9uE
+sQNGYmBEKs+mJYAlzNY=
+=E715
+-----END PGP SIGNATURE-----
